# risc_v-simulator

./: CMakeLists.txt  intepreter.cpp  main.cpp
tool/: circularqueue.h  instruction.h
unit/: Decode.cpp  Decode.h  Predictor.h  alu.h  cpu.h  loadstorebuffer.cpp  loadstorebuffer.h  memory.h  op_queue.cpp  op_queue.h  registers.h  reoderbuffer.cpp  reoderbuffer.h  reservation_stations.cpp  reservation_stations.h
